give nightwalkers better claws

--- a/src/content/npcs/risan/FrozenCatacombs/1F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/1F.yml
@@ -434,7 +434,7 @@
         chance: 1
 
     Hands:
-      - result: Frostlands Frostgolem Gloves
+      - result: Mines Animal Claws
         chance: 1000
       - result: Catacombs Claws 1F
         chance: 1
