--- a/src/content/npcs/risan/FrozenCatacombs/2F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/2F.yml
@@ -475,7 +475,7 @@
         chance: 1
 
     Hands:
-      - result: Frostlands Frostgolem Gloves
+      - result: Mines Animal Claws
         chance: 900
       - result: Catacombs Claws 2F
         chance: 1
