--- a/src/content/npcs/risan/FrozenCatacombs/3F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/3F.yml
@@ -503,7 +503,7 @@
         chance: 1
 
     Hands:
-      - result: Frostlands Frostgolem Gloves
+      - result: Mines Animal Claws
         chance: 800
       - result: Catacombs Claws 3F
         chance: 1
