--- a/src/content/npcs/risan/FrozenCatacombs/4F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/4F.yml
@@ -512,7 +512,7 @@
         chance: 1
 
     Hands:
-      - result: Frostlands Frostgolem Gloves
+      - result: Mines Animal Claws
         chance: 700
       - result: Catacombs Claws 4F
         chance: 1
