--- a/src/content/npcs/risan/FrozenCatacombs/5F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/5F.yml
@@ -517,7 +517,7 @@
         chance: 1
 
     Hands:
-      - result: Frostlands Frostgolem Gloves
+      - result: Mines Animal Claws
         chance: 600
       - result: Catacombs Claws 5F
         chance: 1
