--- a/src/content/npcs/antania/TowerOfSelen/orc.yml
+++ b/src/content/npcs/antania/TowerOfSelen/orc.yml
@@ -263,6 +263,12 @@
     - Tower Shield Strong
     - Antanian Arrows
 
+  baseEffects:
+    - name: DarkVision
+      effectData:
+        effectInfo:
+          isPermanent: true
+
   drops:
     - result: Warlord's Key
       chance: -1
