--- a/src/content/npcs/antania/DedlaenMaze/sw.yml
+++ b/src/content/npcs/antania/DedlaenMaze/sw.yml
@@ -200,14 +200,22 @@
   tansFor: Dedlaen Ghost Cloak
 
   gear:
-    Ear: Enemy Invisibility Earring
-    Head: Enemy TrueSight Earring
     Hands: Maze Ghoul Claws
     Robe1: Dedlaen Ghost Cloak
 
   drops:
     - result: Dedlaen Transmute Pearl
       chance: -1
+
+  baseEffects:
+    - name: TrueSight
+      effectData:
+        effectInfo:
+          isPermanent: true
+    - name: Invisible
+      effectData:
+        effectInfo:
+          isPermanent: true
 
   spawnMessage: "the cry of a spectral horror"
   leashMessage: "the cry of a spectral horror"
@@ -257,8 +265,6 @@
         potency: 0
 
   gear:
-    Ear: Enemy Potency 15 Necrotic Aura Earring
-    Head: Enemy TrueSight Earring
     Hands: Ghast Claws
 
   drops:
@@ -268,6 +274,17 @@
   copyDrops:
     - drop: 'gear.Hands'
       chance: -1
+
+  baseEffects:
+    - name: TrueSight
+      effectData:
+        effectInfo:
+          isPermanent: true
+    - name: NecroticAura
+      effectData:
+        potency: 10
+        effectInfo:
+          isPermanent: true
 
 - npcId: Dedlaen Revenant
   name: revenant
