--- a/src/content/npcs/risan/RisanMines/mines.yml
+++ b/src/content/npcs/risan/RisanMines/mines.yml
@@ -35,7 +35,6 @@
     max: 31000
 
   gear:
-    Ear: Enemy DarkVision Earring
     Armor: Mines Trash Breastplate
     Head:
       - result: none
@@ -80,6 +79,12 @@
     - drop: 'leftHand'
       chance: -1
 
+  baseEffects:
+    - name: DarkVision
+      effectData:
+        effectInfo:
+          isPermanent: true
+
 - npcId: Risan Crazed Miner
   name: crazed miner
   monsterClass: Humanoid
@@ -110,7 +115,6 @@
     max: 51000
 
   gear:
-    Ear: Enemy DarkVision Earring
     Armor: Mines Trash Breastplate
     Head:
       - result: none
@@ -155,6 +159,12 @@
       chance: -1
     - drop: 'leftHand'
       chance: -1
+
+  baseEffects:
+    - name: DarkVision
+      effectData:
+        effectInfo:
+          isPermanent: true
 
 - npcId: Mines Rockman
   name: rockman
