--- a/src/content/items/Shield/holiday.yml
+++ b/src/content/items/Shield/holiday.yml
@@ -15,3 +15,19 @@
 
   requirements:
     level: 15
+
+- name: Christmas Button Shield
+  enchantLevel: 5
+  stats:
+    armorClass: 30
+  desc: "an oversized button, taken from the shirt of a cold giant"
+  value: 2500
+  sprite: 574
+  binds: true
+
+  trait:
+    name: WintersEmbrace
+    level: 2
+
+  requirements:
+    level: 15
