--- a/src/content/items/Longsword/risan.yml
+++ b/src/content/items/Longsword/risan.yml
@@ -2,10 +2,10 @@
 - name: Risan Longsword
   desc: "an iron longsword forged in the land of Risan"
   tier: 5
-  type: Shortsword
+  type: Onehanded
   value: 2500
   sprite: 197
-  
+
   requirements:
     level: 15
 
