--- a/src/content/npcs/risan/FrozenCatacombs/5F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/5F.yml
@@ -701,28 +701,28 @@
     CorrosivePoison: 1
 
   sack:
-    - result: Risan FireMist Thief Trap
+    - result: Enemy Medium FireMist Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan IceMist Thief Trap
+    - result: Enemy Medium IceMist Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan Poison Thief Trap
+    - result: Enemy Medium Poison Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan MagicBolt Thief Trap
+    - result: Enemy Medium MagicBolt Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan HolyFire Thief Trap
+    - result: Enemy Medium HolyFire Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan Snare Thief Trap
+    - result: Enemy Medium Snare Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan Stun Thief Trap
+    - result: Enemy Medium Stun Thief Trap
       chance: 5
       maxChance: 100
-    - result: Risan Blind Thief Trap
+    - result: Enemy Medium Blind Thief Trap
       chance: 5
       maxChance: 100
 
