re-stat christmas items, fix prices, add vendor

--- a/src/content/droptables/maps/Antania/WinterWonderland.yml
+++ b/src/content/droptables/maps/Antania/WinterWonderland.yml
@@ -2,3 +2,7 @@
 - result: Christmas Walnuts
   chance: 1
   maxChance: 50
+
+- result: Cosmetic Scroll - Snowflake Joy
+  chance: 1
+  maxChance: 50000
